@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         SVG-Metadata
-version:      0.19
+version:      0.20
 version_from: lib/SVG/Metadata.pm
 installdirs:  site
 requires:
